# openapi3.yaml
@@ -75,6 +75,27 @@ paths:
           $ref: '#/components/responses/notFound'
         '5XX':
           $ref: '#/components/responses/unexpectedError'
+    patch:
+      operationId: updatePartialRecord
+      summary: Update partial 3d model metadata record fields
+      tags:
+        - metadata
+      parameters:
+        - $ref: '#/components/parameters/identifier'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/updatePayload'
+      responses:
+        200:
+          $ref: '#/components/responses/success'
+        400:
+          $ref: '#/components/responses/badRequest'
+        404:
+          $ref: '#/components/responses/notFound'
+        '5XX':
+          $ref: '#/components/responses/unexpectedError'
     delete:
       operationId: deleteRecord
       summary: Delete a specific 3d model metadata record by record identifier
@@ -271,6 +292,22 @@ components:
           items:
             $ref: '#/components/schemas/link'
           description: Structure of links
+    updatePayload:
+      type: object
+      description: 3d tiles metadata update payload
+      properties:
+        title:
+          type: string
+          description: Title
+        description:
+          type: string
+          description: Description
+        classification:
+          type: string
+          description: Product classification
+        sensorType:
+          type: string
+          description: The sensor used as the source of the product
     records:
       type: array
       items:
