# src/metadata/routes/metadataRouter.ts
@@ -10,6 +10,7 @@ const metadataRouterFactory: FactoryFunction<Router> = (dependencyContainer) => 
   router.get('/:identifier', controller.get);
   router.post('/', controller.post);
   router.put('/:identifier', controller.put);
+  router.patch('/:identifier', controller.patch);
   router.delete('/:identifier', controller.delete);
 
   return router;
